--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.54.0",
     "build": "^0.1.4",
+    "expo": "^53.0.20",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.541.0",
     "next": "15.4.5",
@@ -35,6 +36,7 @@
     "depcheck": "^1.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "next-sitemap": "^4.2.3",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "ts-prune": "^0.10.3",
