--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@supabase/supabase-js": "^2.57.4",
     "build": "^0.1.4",
     "expo": "^53.0.20",
+    "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.541.0",
     "next": "15.4.5",
     "npm": "^11.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "run": "^1.5.0"
+    "run": "^1.5.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@babel/generator": "^7.28.3",
